--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "nodejs": "0.0.0",
     "npm": "^6.10.3",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-sidebar": "^3.0.2",
     "react-transition-group": "^4.2.2",
-    "styled-components": "^4.3.2"
+    "react-typing-animation": "^1.6.2",
+    "react-typing-effect": "^2.0.2",
+    "react-typist": "^2.0.5",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
