adding gh pages

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mywebby",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://djfliu.github.io/mywebby/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "gh-pages": "^2.1.1",
     "nodejs": "0.0.0",
     "npm": "^6.10.3",
     "react": "^16.9.0",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
